[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cuentica-mcp"
version = "0.2.0"
description = "MCP server para la API de Cuéntica — facturación y contabilidad para autónomos en España"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
cuentica-mcp = "cuentica_mcp.server:main"

[project.urls]
Homepage = "https://github.com/UNGRYNERD/cuentica-mcp"
Repository = "https://github.com/UNGRYNERD/cuentica-mcp"

[tool.hatch.build.targets.wheel]
packages = ["src/cuentica_mcp"]
